--- a/airootfs/etc/skel/.themes/flat-remix-gtk-odysenui-light/libadwaita/gtk.css
+++ b/airootfs/etc/skel/.themes/flat-remix-gtk-odysenui-light/libadwaita/gtk.css
@@ -1,5 +1,5 @@
 @define-color accent_bg_color #1DEDA2;
-@define-color accent_fg_color #1DEDA2;
+@define-color accent_fg_color #08091E;
 @define-color accent_color @accent_bg_color;
 @define-color destructive_bg_color @red_3;
 @define-color destructive_fg_color white;
