--- a/airootfs/etc/skel/.themes/flat-remix-odysenui-light/gnome-shell/gnome-shell.css
+++ b/airootfs/etc/skel/.themes/flat-remix-odysenui-light/gnome-shell/gnome-shell.css
@@ -145,11 +145,11 @@ stage {
 
 .keyboard-brightness-level .button:checked, .quick-menu-toggle .quick-toggle-arrow:checked, .quick-toggle:checked, .calendar .calendar-day.calendar-today, .icon-button.default, .default.login-dialog-button.cancel-button, .default.login-dialog-button.switch-user-button, .default.login-dialog-button.login-dialog-session-list-button, .default.screenshot-ui-show-pointer-button, .message .message-header .default.message-expand-button,
 .message .message-header .default.message-close-button, .calendar .calendar-month-header .default.pager-button, .button.default {
-  color: #1DEDA2;
+  color: #08091E;
   background-color: #1DEDA2; }
   .keyboard-brightness-level .button:focus:checked, .quick-menu-toggle .quick-toggle-arrow:focus:checked, .quick-toggle:focus:checked, .calendar .calendar-day.calendar-today:focus, .icon-button.default:focus, .default.login-dialog-button.cancel-button:focus, .default.login-dialog-button.switch-user-button:focus, .default.login-dialog-button.login-dialog-session-list-button:focus, .default.screenshot-ui-show-pointer-button:focus, .message .message-header .default.message-expand-button:focus,
   .message .message-header .default.message-close-button:focus, .calendar .calendar-month-header .default.pager-button:focus, .button.default:focus {
-    color: #1DEDA2;
+    color: #08091E;
     box-shadow: inset 0 0 0 2px rgba(29, 237, 162, 0.5) !important;
     box-shadow: inset 0 0 0 2px #0eb075 !important;
     background-color: #1deda2; }
@@ -158,15 +158,15 @@ stage {
       background-color: #13e498; }
   .keyboard-brightness-level .button:hover:checked, .quick-menu-toggle .quick-toggle-arrow:hover:checked, .quick-toggle:hover:checked, .calendar .calendar-day.calendar-today:hover, .icon-button.default:hover, .default.login-dialog-button.cancel-button:hover, .default.login-dialog-button.switch-user-button:hover, .default.login-dialog-button.login-dialog-session-list-button:hover, .default.screenshot-ui-show-pointer-button:hover, .message .message-header .default.message-expand-button:hover,
   .message .message-header .default.message-close-button:hover, .calendar .calendar-month-header .default.pager-button:hover, .button.default:hover {
-    color: #1DEDA2;
+    color: #08091E;
     background-color: #12e398; }
   .keyboard-brightness-level .button:insensitive:checked, .quick-menu-toggle .quick-toggle-arrow:insensitive:checked, .quick-toggle:insensitive:checked, .calendar .calendar-day.calendar-today:insensitive, .icon-button.default:insensitive, .default.login-dialog-button.cancel-button:insensitive, .default.login-dialog-button.switch-user-button:insensitive, .default.login-dialog-button.login-dialog-session-list-button:insensitive, .default.screenshot-ui-show-pointer-button:insensitive, .message .message-header .default.message-expand-button:insensitive,
   .message .message-header .default.message-close-button:insensitive, .calendar .calendar-month-header .default.pager-button:insensitive, .button.default:insensitive {
-    color: rgba(29, 237, 162, 0.4);
+    color: rgba(8, 9, 30, 0.4);
     background-color: #2beea8; }
   .keyboard-brightness-level .button:active:checked, .quick-menu-toggle .quick-toggle-arrow:active:checked, .quick-toggle:active:checked, .calendar .calendar-day.calendar-today:active, .icon-button.default:active, .default.login-dialog-button.cancel-button:active, .default.login-dialog-button.switch-user-button:active, .default.login-dialog-button.login-dialog-session-list-button:active, .default.screenshot-ui-show-pointer-button:active, .message .message-header .default.message-expand-button:active,
   .message .message-header .default.message-close-button:active, .calendar .calendar-month-header .default.pager-button:active, .button.default:active {
-    color: #1DEDA2;
+    color: #08091E;
     background-color: #10cc88; }
     .keyboard-brightness-level .button:active:hover:checked, .quick-menu-toggle .quick-toggle-arrow:active:hover:checked, .quick-toggle:active:hover:checked, .calendar .calendar-day.calendar-today:active:hover, .icon-button.default:active:hover, .default.login-dialog-button.cancel-button:active:hover, .default.login-dialog-button.switch-user-button:active:hover, .default.login-dialog-button.login-dialog-session-list-button:active:hover, .default.screenshot-ui-show-pointer-button:active:hover, .message .message-header .default.message-expand-button:active:hover,
     .message .message-header .default.message-close-button:active:hover, .calendar .calendar-month-header .default.pager-button:active:hover, .button.default:active:hover {
@@ -261,7 +261,7 @@ stage {
   border-radius: 8px;
   padding: 9px 9px;
   selection-background-color: #1DEDA2;
-  selected-color: #1DEDA2; }
+  selected-color: #08091E; }
 
 StEntry {
   background-color: #ebeced;
@@ -979,7 +979,7 @@ StScrollBar {
       .calendar .calendar-day.calendar-other-month.calendar-weekend {
         color: rgba(92, 97, 108, 0.5); }
     .calendar .calendar-day.calendar-today {
-      color: #1DEDA2 !important; }
+      color: #08091E !important; }
       .calendar .calendar-day.calendar-today.calendar-day-with-events {
         background-image: url("assets/calendar-today.svg") !important; }
     .calendar .calendar-day.calendar-day-with-events {
@@ -1213,7 +1213,7 @@ StScrollBar {
   border-radius: 8px; }
   .candidate-box:selected {
     background-color: #1DEDA2;
-    color: #1DEDA2; }
+    color: #08091E; }
   .candidate-box:hover {
     background-color: #e8e8e8;
     color: #474b53; }
@@ -1354,7 +1354,7 @@ StScrollBar {
     background-color: #e8e8e8; }
   .audio-selection-device:active {
     background-color: #1DEDA2;
-    color: #1DEDA2; }
+    color: #08091E; }
 
 .audio-selection-device-box {
   padding: 20px;
@@ -1407,7 +1407,7 @@ StScrollBar {
 
 .osd-monitor-label {
   background-color: #1DEDA2;
-  color: #1DEDA2;
+  color: #08091E;
   border-radius: 16px;
   font-size: 3em;
   font-weight: bold;
@@ -1630,7 +1630,7 @@ StScrollBar {
   background-color: rgba(29, 237, 162, 0.2); }
 
 .screenshot-ui-window-selector-window:checked .screenshot-ui-window-selector-check {
-  color: #1DEDA2;
+  color: #08091E;
   background-color: #1DEDA2; }
 
 .screenshot-ui-screen-selector {
@@ -2005,7 +2005,7 @@ StScrollBar {
       background-color: rgba(92, 97, 108, 0.2); }
       .quick-toggle-menu .header .icon.active {
         background-color: #1DEDA2;
-        color: #1DEDA2; }
+        color: #08091E; }
 
 .quick-settings-system-item > StBoxLayout {
   spacing: 12px; }
@@ -2667,27 +2667,27 @@ StScrollBar {
       border-color: #35efac;
       background-color: #1DEDA2; }
   .keyboard-key.enter-key {
-    color: #1DEDA2;
-    background-color: #1deda2;
+    color: #08091E;
+    background-color: #1ad292;
     border-radius: 10px;
     color: white; }
     .keyboard-key.enter-key:hover {
-      color: #1DEDA2;
-      background-color: #12e398; }
+      color: #08091E;
+      background-color: #18c085; }
     .keyboard-key.enter-key:active {
-      color: #1DEDA2;
-      background-color: #10cc88; }
+      color: #08091E;
+      background-color: #15a976; }
       .keyboard-key.enter-key:active:hover {
-        background-color: #0fb97c; }
+        background-color: #139769; }
       .keyboard-key.enter-key:active:focus {
-        background-color: #11ce89; }
+        background-color: #15ad78; }
     .keyboard-key.enter-key:checked {
-      color: #1DEDA2;
-      background-color: #11d18b; }
+      color: #08091E;
+      background-color: #16ae79; }
       .keyboard-key.enter-key:checked:hover {
-        background-color: #0fbe7f; }
+        background-color: #139c6c; }
       .keyboard-key.enter-key:checked:active {
-        background-color: #0da66f; }
+        background-color: #10855c; }
   .keyboard-key.shift-key-uppercase {
     background-color: #5b627a;
     color: #303340; }
@@ -2967,7 +2967,7 @@ StScrollBar {
   color: #b3b3b3; }
   .login-dialog-auth-list-item:focus, .login-dialog-auth-list-item:selected {
     background-color: #1DEDA2;
-    color: #1DEDA2; }
+    color: #08091E; }
 
 .login-dialog-auth-list-label:ltr {
   padding-left: 15px;
