--- a/airootfs/etc/skel/.themes/flat-remix-odysenui-light/gnome-shell/gnome-shell.css
+++ b/airootfs/etc/skel/.themes/flat-remix-odysenui-light/gnome-shell/gnome-shell.css
@@ -3181,14 +3181,14 @@ StScrollBar {
 
 /* Top Bar */
 #panelBox {
-  padding: 5px 12px;
+  padding: 0;
   background: transparent; }
 
 #panel {
-  padding: 0;
+  padding: 1px 0;
   font-size: 90%;
   height: 2em;
-  border-radius: 7px;
+  border-radius: 0;
   background: rgba(0, 0, 0, 0.2);
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
   box-shadow: none; }
